Repaired main